<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:orientation="vertical"
 	android:layout_width="350dp"
 	android:layout_height="wrap_content"
 	android:background="@color/darkGray"
 	android:padding="20dp" >

	<LinearLayout
		android:id="@+id/internal_layout"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp" >

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/black"
			android:textSize="20dp"
			android:gravity="center"
			android:padding="6dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:text="@string/internal_stroage"
			android:textColor="@color/white"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/total"
				android:textColor="@color/white"/>
			<TextView
				android:id="@+id/internal_total_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"/>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/free"
				android:textColor="@color/white"/>
			<TextView
				android:id="@+id/internal_free_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"/>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="15dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/used"
				android:textColor="@color/white"/>
			<TextView
				android:id="@+id/internal_used_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:id="@+id/ram_layout"
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="25dp"
		android:layout_marginBottom="10dp">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/black"
			android:textSize="20dp"
			android:gravity="center"
			android:padding="6dp"
			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			android:text="@string/ram_stroage"
			android:textColor="@color/white"/>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ram_total"
				android:textColor="@color/white"/>
			<TextView
				android:id="@+id/ram_total_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"/>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ram_free"
				android:textColor="@color/white"/>
			<TextView
				android:id="@+id/ram_free_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"/>
		</LinearLayout>

		<LinearLayout
			android:orientation="horizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="12dp"
			android:layout_marginBottom="15dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/ram_used"
				android:textColor="@color/white"/>
			<TextView
				android:id="@+id/ram_used_value"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@color/white"/>
		</LinearLayout>

	</LinearLayout>

</LinearLayout>